--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-query": "^5.62.11",
     "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-table": "^8.20.6",
+    "@tanstack/react-virtual": "^3.13.10",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
