--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
+    "framer-motion": "^12.16.0",
     "immer": "^10.1.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.469.0",
     "nuqs": "^2.2.3",
     "react": "^18.3.1",
@@ -60,6 +63,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1",
     "zustand": "^4.5.5"
   },
