--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-drag-drop-files": "^3.0.1",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0",
